# March-projects

./: 5_1_Аналитика_в_медицине_Метрики_данных.ipynb  README.md  pyproject.toml
app/project_3.2/: main.ipynb  Визуализация (Блокнот к вебинару).ipynb
app/project_3.3/: main.ipynb  Визуализация_2_Seaborn.ipynb  Визуализация_3.ipynb
app/project_3.5/: main.ipynb  Временные_ряды.ipynb
