[project]
name = "march-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = []
